feat Tryment-Clock

--- a/themes/fluid/layout/layout.ejs
+++ b/themes/fluid/layout/layout.ejs
@@ -10,12 +10,15 @@ var colorSchema = theme.dark_mode && theme.dark_mode.enable && theme.dark_mode.d
 
 <body>
   <%- inject_point('bodyBegin') %>
-
   <header>
     <%- inject_point('header') %>
   </header>
 
   <main>
+    <% if (theme.background_trymentclock.enable) { %>
+      <%- css_ex(theme.static_prefix.internal_css, 'TrymenT-ClocK.min.css') %>
+      <%- js_ex(theme.static_prefix.internal_js, 'TrymenT-ClocK.min.js', { defer: true }) %>
+      <% } %>
     <% if(is_post() || page.layout === '404') { %>
       <%- body %>
     <% } else { %>
